tests/spec/emit/snapshots/go_curated_struct_with_unexported_embed_autofills.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:runtime"
  
  fn test() {
    let mut p = runtime.Pinner { .. }
    p.Unpin()
  }
---
package main

import "runtime"

func test() {
	p := runtime.Pinner{}
	p.Unpin()
}
