tests/spec/emit/snapshots/go_fn_value_if_binding_wrapping.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn main() {
    let cond = true
    let f = if cond { strconv.Atoi } else { strconv.Atoi }
    let r = f("99")
    fmt.Println(r)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func main() {
	cond := true
	var f func(string) (int, error)
	if cond {
		f = strconv.Atoi
	} else {
		f = strconv.Atoi
	}
	r := lisette.ResultFromPair[int](f("99"))
	fmt.Println(r)
}
