tests/spec/emit/snapshots/go_fn_value_parenthesized_binding.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let f: fn(string) -> Result<int, error> = (strconv.Atoi)
    let r = f("1")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func main() {
	f := strconv.Atoi
	r, err := f("1")
	if err == nil {
		_ = r
	}
}
