tests/spec/emit/snapshots/go_fn_value_parenthesized_call.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn main() {
    let r = (strconv.Atoi)("42")
    fmt.Println(r)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func main() {
	r := lisette.ResultFromPair[int](strconv.Atoi("42"))
	fmt.Println(r)
}
