tests/spec/emit/snapshots/go_fn_value_scope_isolation.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn main() {
    {
      let f = strconv.Atoi
      let _ = f("1")
    }
    let f = |s: string| -> int { 0 }
    let r = f("2")
    fmt.Println(r)
  }
---
package main

import (
	"fmt"
	"strconv"
)

func main() {
	{
		f := strconv.Atoi
		f("1")
	}
	f := func(_ string) int {
		return 0
	}
	r := f("2")
	fmt.Println(r)
}
