tests/spec/emit/snapshots/go_fn_value_shadowed_wrapping.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn main() {
    let f = strconv.Atoi
    let f = strconv.Atoi
    let r = f("42")
    fmt.Println(r)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func main() {
	_ = strconv.Atoi
	f := strconv.Atoi
	r := lisette.ResultFromPair[int](f("42"))
	fmt.Println(r)
}
