tests/spec/emit/snapshots/go_function_ref_first_param_not_pointer_receiver.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:flag"
  
  fn main() {
    let f = flag.UnquoteUsage
    let fl = flag.Lookup("verbose")
    match fl {
      Some(v) => { let _ = f(v) },
      None => {},
    }
  }
---
package main

import (
	"flag"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	f := flag.UnquoteUsage
	raw := flag.Lookup("verbose")
	fl := lisette.OptionFromNilable[*flag.Flag](raw, raw == nil)
	if fl.Tag == lisette.OptionSome {
		f(fl.SomeVal)
	}
}
