tests/spec/emit/snapshots/go_function_returning_tuple_and_error_generates_three_variables.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:net"
  
  fn main() {
    match net.SplitHostPort("localhost:8080") {
      Ok((host, port)) => {
        let _ = host
        let _ = port
        ()
      },
      Err(e) => {
        let _ = e
        ()
      },
    }
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"net"
)

func main() {
	ret, ret_1, ret_2 := net.SplitHostPort("localhost:8080")
	tup := lisette.MakeTuple2(ret, ret_1)
	var result lisette.Result[lisette.Tuple2[string, string], error]
	if ret_2 != nil {
		result = lisette.MakeResultErr[lisette.Tuple2[string, string], error](ret_2)
	} else {
		result = lisette.MakeResultOk[lisette.Tuple2[string, string], error](tup)
	}
	if result.Tag == lisette.ResultOk {
		_ = result.OkVal.First
		_ = result.OkVal.Second
	} else {
		_ = result.ErrVal
	}
}
