tests/spec/emit/snapshots/go_function_value_result_wrapper.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn parse_with(f: fn(string) -> Result<int, error>, s: string) -> int {
    match f(s) {
      Ok(n) => n,
      Err(_) => 0,
    }
  }
  
  fn main() {
    let n = parse_with(strconv.Atoi, "42")
    fmt.Println(n)
  }
---
package main

import (
	"fmt"
	"strconv"
)

func parseWith(f func(string) (int, error), s string) int {
	if n, err := f(s); err == nil {
		return n
	} else {
		return 0
	}
}

func main() {
	n := parseWith(strconv.Atoi, "42")
	fmt.Println(n)
}
