tests/spec/emit/snapshots/go_import_pointer_receiver_method_expression.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:bytes"
  
  fn main() {
    let f = bytes.Buffer.ReadString
    let mut buf = bytes.Buffer {}
    let _ = f(&buf, 10)
  }
---
package main

import "bytes"

func main() {
	f := (*bytes.Buffer).ReadString
	buf := bytes.Buffer{}
	f(&buf, 10)
}
